# WorldsCollide

./: .gitignore  build-wc-flag-metadata.py  pyproject.toml  wc.py
WorldsCollide/: seed.py  sprite_hash.py  valid_rom_file.py  wc.py
WorldsCollide/api/: get_manifest.py  get_palettes.py  get_portrait_bytes.py  get_portraits.py  get_random_sprite_pose.py  get_sprite_base64.py  get_sprite_palette_bytes.py  get_sprites.py
WorldsCollide/args/: __init__.py  arguments.py  auction_house.py  blitzes.py  boss_ai.py  bosses.py  bug_fixes.py  challenges.py  characters.py  chests.py  coliseum.py  commands.py  dances.py  encounters.py  espers.py  graphics.py  items.py  log.py  lores.py  misc.py  misc_magic.py  natural_magic.py  objectives.py  rages.py  scaling.py  settings.py  shops.py  sketch_control.py  starting_gold_items.py  starting_party.py  steal.py  swdtechs.py  xpmpgp.py
WorldsCollide/battle/: animations.py  auto_status.py  magitek_upgrade.py  multipliers.py  scaling.py  scaling_functions.py
WorldsCollide/bug_fixes/: capture.py  jump.py  sketch.py  vanish_doom.py
WorldsCollide/constants/: entities.py  items.py  rages.py  spells.py  standard_flags.py
WorldsCollide/data/: ability_data.py  area_chests.py  battle_animation_scripts.py  battle_bit.py  blitzes.py  bosses.py  character.py  character_palette.py  character_palettes.py  character_sprite.py  character_sprites.py  characters.py  characters_asm.py  chest.py  chest_item_tiers.py  chests.py  coliseum.py  commands.py  control.py  controls.py  dance.py  dances.py  data.py  enemies.py  enemy.py  enemy_battle_groups.py  enemy_formation.py  enemy_formations.py  enemy_pack.py  enemy_packs.py  enemy_script.py  enemy_script_commands.py  enemy_script_custom_commands.py  enemy_script_parser.py  enemy_scripts.py  enemy_zone.py  enemy_zones.py  esper.py  espers.py  espers_asm.py  (+43 more)
WorldsCollide/event/: airship.py  auction_house.py  baren_falls.py  burning_house.py  cid_island.py  collapsing_house.py  debug_room.py  doma_wob.py  doma_wor.py  doom_gaze.py  duncan_house_wor.py  ebots_rock.py  eight_dragons.py  event.py  event_reward.py  events.py  figaro_castle_wor.py  floating_continent.py  imperial_base.py  kefka_tower.py  lete_river.py  lone_wolf.py  magitek_factory.py  mobliz_wob.py  mobliz_wor.py  mt_kolts.py  mt_zozo.py  narshe_battle.py  narshe_moogle_defense.py  narshe_wor.py  opera_house_wob.py  owzer_mansion.py  phantom_train.py  serpent_trench.py  south_figaro_cave_wob.py  start.py  tritoch.py  tzen.py  umaro_cave.py  veldt.py  (+2 more)
WorldsCollide/graphics/: bgr15.py  palette.py  ppm.py  sprite.py  title_loader.py
WorldsCollide/instruction/: asm.py  battle_event.py  c0.py  c3.py  entity.py  event.py  vehicle.py  world.py
WorldsCollide/log/: __init__.py  format.py
WorldsCollide/memory/: bank.py  free.py  heap.py  label.py  memory.py  rom.py  space.py
WorldsCollide/menus/: checks.py  dance.py  flags.py  flags_remove_learnable_spells.py  flags_reward_items.py  magic.py  menus.py  objectives.py  pregame.py  pregame_track.py  pregame_track_scroll_area.py  progress.py  rage.py  status.py  track.py
WorldsCollide/metadata/: flag_metadata_writer.py  objective_condition_metadata.py  objective_metadata.py  objective_metadata_writer.py
tests/: conftest.py  test_refactor.py
(+125 files in other folders)
